--- a/etc/init/charts.conf
+++ b/etc/init/charts.conf
@@ -7,7 +7,7 @@ stop on runlevel [016]
 respawn
 
 setuid prod
-chdir /home/prod/scr/charts
+chdir /home/prod/src/charts
 env HOME=/home/prod
 env GOPATH=/home/prod
 exec go run server.go
